fix: image overflow on mobile

--- a/src/styles/MyFormSyntax.css
+++ b/src/styles/MyFormSyntax.css
@@ -62,3 +62,9 @@ table[data-type="column"] tr td:last-child {
 .flex.column {
  flex-direction: column;
 }
+
+@media only screen and (max-width: 768px) {
+ img[data-page="slug"] {
+  width: 100%;
+ }
+}
